--- a/main.ipynb
+++ b/main.ipynb
@@ -39,10 +39,6 @@
     "import re\n",
     "import ast\n",
     "import json\n",
-    "import gc\n",
-    "import random\n",
-    "from collections import Counter\n",
-    "from difflib import SequenceMatcher\n",
     "from typing import List, Tuple, Optional\n",
     "\n",
     "import numpy as np\n",
@@ -60,18 +56,11 @@
     "from peft import (\n",
     "    get_peft_model,\n",
     "    LoraConfig,\n",
-    "    TaskType,\n",
-    "    PromptTuningConfig,\n",
-    "    PromptTuningInit\n",
+    "    TaskType\n",
     ")\n",
     "\n",
     "from sentence_transformers import SentenceTransformer, CrossEncoder\n",
-    "import faiss\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from tqdm import tqdm"
+    "import faiss"
    ]
   },
   {
@@ -81,8 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader"
+    "import torch"
    ]
   },
   {
