--- a/main.ipynb
+++ b/main.ipynb
@@ -340,6 +340,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a823abc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Common utilities for SAQ and MCQ\n",
+    "\n",
+    "COUNTRY_CODE_MAP = {\n",
+    "    \"Iran\": \"IR\",\n",
+    "    \"China\": \"CN\",\n",
+    "    \"UK\": \"GB\",\n",
+    "    \"United Kingdom\": \"GB\",\n",
+    "    \"US\": \"US\",\n",
+    "    \"United States\": \"US\",\n",
+    "}\n",
+    "\n",
+    "def clear_gpu():\n",
+    "    \"\"\"Free GPU memory between training/inference stages.\"\"\"\n",
+    "    import gc\n",
+    "    for name in [\"model\", \"tokenizer\", \"saq_trainer\", \"mcq_trainer\"]:\n",
+    "        try:\n",
+    "            del globals()[name]\n",
+    "        except KeyError:\n",
+    "            pass\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()\n",
+    "\n",
+    "def load_base_model(adapter_path: str):\n",
+    "    \"\"\"Load base model and attach a LoRA adapter.\"\"\"\n",
+    "    base_model = AutoModelForCausalLM.from_pretrained(\n",
+    "        model_name,\n",
+    "        device_map=\"auto\"\n",
+    "    )\n",
+    "    from peft import PeftModel\n",
+    "    return PeftModel.from_pretrained(base_model, adapter_path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "550c60c6",
    "metadata": {},
@@ -356,7 +395,7 @@
    "source": [
     "# Load SAQ training data\n",
     "\n",
-    "saq_df_clean = pd.read_csv(\"train_dataset_saq.csv\")\n",
+    "saq_df = pd.read_csv(\"train_dataset_saq.csv\")\n",
     "\n",
     "def extract_answers(annotations_str):\n",
     "    \"\"\"Extract English answers from annotations JSON string.\"\"\"\n",
@@ -370,12 +409,12 @@
     "            answers.extend(ann[\"en_answers\"])\n",
     "    return list({a.strip() for a in answers if a.strip()})\n",
     "\n",
-    "saq_df_clean[\"en_answers\"] = saq_df_clean[\"annotations\"].apply(extract_answers)\n",
-    "saq_df_clean = saq_df_clean[saq_df_clean[\"en_answers\"].map(len) > 0].reset_index(drop=True)\n",
+    "saq_df[\"en_answers\"] = saq_df[\"annotations\"].apply(extract_answers)\n",
+    "saq_df = saq_df[saq_df[\"en_answers\"].map(len) > 0].reset_index(drop=True)\n",
     "\n",
     "print(\"Country distribution:\")\n",
-    "print(saq_df_clean['country'].value_counts())\n",
-    "print(f\"\\nTotal SAQ training samples: {len(saq_df_clean)}\")"
+    "print(saq_df['country'].value_counts())\n",
+    "print(f\"\\nTotal SAQ training samples: {len(saq_df)}\")"
    ]
   },
   {
@@ -399,7 +438,7 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "class SAQDatasetClean(torch.utils.data.Dataset):\n",
+    "class SAQDataset(torch.utils.data.Dataset):\n",
     "    \"\"\"SAQ Dataset with few-shot examples using apply_chat_template for proper Mistral formatting.\"\"\"\n",
     "    \n",
     "    def __init__(self, df, tokenizer, max_length=384):\n",
@@ -490,10 +529,10 @@
    "outputs": [],
    "source": [
     "# Create and preview SAQ dataset\n",
-    "saq_dataset_clean = SAQDatasetClean(saq_df_clean, tokenizer, max_length=256)\n",
+    "saq_dataset = SAQDataset(saq_df, tokenizer, max_length=256)\n",
     "\n",
-    "sample = saq_dataset_clean[0]\n",
-    "print(f\"Created dataset with {len(saq_dataset_clean)} samples\")\n",
+    "sample = saq_dataset[0]\n",
+    "print(f\"Created dataset with {len(saq_dataset)} samples\")\n",
     "print(f\"Sample input (first 50 tokens): {tokenizer.decode(sample['input_ids'][:50])}\")"
    ]
   },
@@ -508,10 +547,10 @@
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    model_name,\n",
-    "    torch_dtype=torch.float16,\n",
+    "    dtype=torch.float16,\n",
     ").to(device)\n",
     "\n",
-    "saq_lora_config_clean = LoraConfig(\n",
+    "saq_lora_config = LoraConfig(\n",
     "    r=16,\n",
     "    lora_alpha=32,\n",
     "    target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\"],\n",
@@ -520,7 +559,7 @@
     "    task_type=TaskType.CAUSAL_LM\n",
     ")\n",
     "\n",
-    "model = get_peft_model(model, saq_lora_config_clean)\n",
+    "model = get_peft_model(model, saq_lora_config)\n",
     "model.print_trainable_parameters()"
    ]
   },
@@ -532,7 +571,7 @@
    "outputs": [],
    "source": [
     "# Configure SAQ training arguments\n",
-    "saq_training_args_clean = TrainingArguments(\n",
+    "saq_training_args = TrainingArguments(\n",
     "    output_dir=\"./saq-lora-clean\",\n",
     "    per_device_train_batch_size=4,\n",
     "    gradient_accumulation_steps=4,\n",
@@ -549,10 +588,10 @@
     "    weight_decay=0.01,\n",
     ")\n",
     "\n",
-    "saq_trainer_clean = Trainer(\n",
+    "saq_trainer = Trainer(\n",
     "    model=model,\n",
-    "    args=saq_training_args_clean,\n",
-    "    train_dataset=saq_dataset_clean\n",
+    "    args=saq_training_args,\n",
+    "    train_dataset=saq_dataset\n",
     ")"
    ]
   },
@@ -564,7 +603,7 @@
    "outputs": [],
    "source": [
     "# Train SAQ model\n",
-    "saq_trainer_clean.train()\n",
+    "saq_trainer.train()\n",
     "\n",
     "model.save_pretrained(\"./saq-lora-adapter-clean\")\n",
     "tokenizer.save_pretrained(\"./saq-lora-adapter-clean\")\n",
@@ -586,20 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gc\n",
-    "import torch\n",
-    "\n",
-    "\n",
-    "try:\n",
-    "    del model\n",
-    "    del saq_trainer_clean\n",
-    "    del tokenizer\n",
-    "except NameError:\n",
-    "    pass\n",
-    "\n",
-    "gc.collect()\n",
-    "\n",
-    "torch.cuda.empty_cache()"
+    "clear_gpu()"
    ]
   },
   {
@@ -609,15 +635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    model_name,\n",
-    "    device_map=\"auto\"              \n",
-    ")\n",
-    "\n",
-    "from peft import PeftModel\n",
-    "model = PeftModel.from_pretrained(model, \"./saq-lora-adapter-clean\")"
+    "model = load_base_model(\"./saq-lora-adapter-clean\")"
    ]
   },
   {
@@ -851,23 +869,14 @@
    "source": [
     "# Run SAQ predictions on test set\n",
     "\n",
-    "COUNTRY_CODE_MAP = {\n",
-    "    \"Iran\": \"IR\",\n",
-    "    \"China\": \"CN\",\n",
-    "    \"UK\": \"GB\",\n",
-    "    \"United Kingdom\": \"GB\",\n",
-    "    \"US\": \"US\",\n",
-    "    \"United States\": \"US\",\n",
-    "}\n",
+    "saq_test = pd.read_csv(\"test_dataset_saq.csv\")[[\"ID\", \"en_question\", \"country\"]]\n",
+    "saq_test[\"country_code\"] = saq_test[\"country\"].map(COUNTRY_CODE_MAP).fillna(saq_test[\"country\"])\n",
     "\n",
-    "saq_test_clean = pd.read_csv(\"test_dataset_saq.csv\")[[\"ID\", \"en_question\", \"country\"]]\n",
-    "saq_test_clean[\"country_code\"] = saq_test_clean[\"country\"].map(COUNTRY_CODE_MAP).fillna(saq_test_clean[\"country\"])\n",
-    "\n",
-    "saq_preds_clean = []\n",
+    "saq_preds = []\n",
     "rag_usage_count = 0\n",
     "model.eval()\n",
     "\n",
-    "for i, row in saq_test_clean.iterrows():\n",
+    "for i, row in saq_test.iterrows():\n",
     "    answer, used_rag, context = saq_generate_with_rag(\n",
     "        question=row[\"en_question\"],\n",
     "        model=model,\n",
@@ -879,22 +888,22 @@
     "        max_context_chars=3500\n",
     "    )\n",
     "    answer = normalize_answer(answer)\n",
-    "    saq_preds_clean.append(answer)\n",
+    "    saq_preds.append(answer)\n",
     "    \n",
     "    if used_rag:\n",
     "        rag_usage_count += 1\n",
     "    \n",
     "    if i % 20 == 0:\n",
-    "        print(f\"\\rProgress: {i+1}/{len(saq_test_clean)} | RAG used: {rag_usage_count}\", end=\"\", flush=True)\n",
+    "        print(f\"\\rProgress: {i+1}/{len(saq_test)} | RAG used: {rag_usage_count}\", end=\"\", flush=True)\n",
     "\n",
-    "saq_test_clean[\"answer\"] = saq_preds_clean\n",
+    "saq_test[\"answer\"] = saq_preds\n",
     "\n",
-    "saq_submission_clean = saq_test_clean[[\"ID\", \"answer\"]]\n",
-    "saq_submission_clean.loc[saq_submission_clean[\"answer\"] == \"\", \"answer\"] = \"none\"\n",
-    "saq_submission_clean.to_csv(\"saq_prediction.tsv\", sep='\\t', index=False)\n",
+    "saq_submission = saq_test[[\"ID\", \"answer\"]]\n",
+    "saq_submission.loc[saq_submission[\"answer\"] == \"\", \"answer\"] = \"none\"\n",
+    "saq_submission.to_csv(\"saq_prediction.tsv\", sep='\\t', index=False)\n",
     "\n",
     "print(f\"\\n\\nSAQ predictions complete!\")\n",
-    "print(f\"Total: {len(saq_test_clean)} | RAG used: {rag_usage_count} ({100*rag_usage_count/len(saq_test_clean):.1f}%)\")\n",
+    "print(f\"Total: {len(saq_test)} | RAG used: {rag_usage_count} ({100*rag_usage_count/len(saq_test):.1f}%)\")\n",
     "print(f\"Saved to saq_prediction.tsv\")"
    ]
   },
@@ -1109,7 +1118,7 @@
    "source": [
     "# Train MCQ model\n",
     "mcq_training_args = TrainingArguments(\n",
-    "    output_dir=\"./mcq_lora\",\n",
+    "    output_dir=\"./mcq-lora-adapter-clean\",\n",
     "    per_device_train_batch_size=2,\n",
     "    gradient_accumulation_steps=8,\n",
     "    learning_rate=2e-4,\n",
@@ -1145,20 +1154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gc\n",
-    "import torch\n",
-    "\n",
-    "\n",
-    "try:\n",
-    "    del model\n",
-    "    del saq_trainer_clean\n",
-    "    del tokenizer\n",
-    "except NameError:\n",
-    "    pass\n",
-    "\n",
-    "gc.collect()\n",
-    "\n",
-    "torch.cuda.empty_cache()"
+    "clear_gpu()"
    ]
   },
   {
@@ -1168,13 +1164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    model_name,\n",
-    "    device_map=\"auto\"              \n",
-    ")\n",
-    "\n",
-    "from peft import PeftModel\n",
-    "model = PeftModel.from_pretrained(model, \"./mcq-lora-adapter-clean\")"
+    "model = load_base_model(\"./mcq-lora-adapter-clean\")"
    ]
   },
   {
